app/k8s/movierama.auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: "50%"
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        imagePullPolicy: IfNotPresent
        image: movierama/app
        ports:
        - containerPort: 8080
          name: auth
        command: [ "npm" ]
        args: [ "run", "auth" ]
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
  - port: 8080
    name: auth
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/auth/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth
                port:
                  number: 8080
