app/k8s/movierama.movies.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies
  labels:
    app: movies
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: "50%"
  selector:
    matchLabels:
      app: movies
  template:
    metadata:
      labels:
        app: movies
    spec:
      containers:
      - name: movies
        imagePullPolicy: IfNotPresent
        image: localhost:32000/movierama/app
        command: [ "npm" ]
        args: [ "run", "movies" ]
        ports:
        - containerPort: 8080
          name: movies
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: movies
spec:
  type: ClusterIP
  selector:
    app: movies
  ports:
  - port: 8080
    name: movies
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movies
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/movies/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: movies
                port:
                  number: 8080
