app/k8s/movierama.ratings.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings
  labels:
    app: ratings
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: "50%"
  selector:
    matchLabels:
      app: ratings
  template:
    metadata:
      labels:
        app: ratings
    spec:
      containers:
      - name: ratings
        imagePullPolicy: IfNotPresent
        image: movierama/app
        command: [ "npm" ]
        args: [ "run", "ratings" ]
        ports:
        - containerPort: 8080
          name: ratings
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ratings
spec:
  type: ClusterIP
  selector:
    app: ratings
  ports:
  - port: 8080
    name: ratings
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ratings
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/rating/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: ratings
                port:
                  number: 8080
